--- a/views/admin/editproduct.ejs
+++ b/views/admin/editproduct.ejs
@@ -164,7 +164,7 @@
                                                             <div class="col-md-6 mt-4">
                                                                 <div class="mb-3 " id="photoParent">
                                                                   <label for="productPhoto" class="form-label">Upload Photo</label>
-                                                                  <input value=" http://localhost:5000/productImages/<%= product.image %>" type="file" class="form-control" id="photoProduct" name="image" accept="image/png,image/gif,image/jpg,image/jpeg" multiple onchange="displaySelectedImages(this)"/>
+                                                                  <input value="/productImages/<%= product.image %>" type="file" class="form-control" id="photoProduct" name="image" accept="image/png,image/gif,image/jpg,image/jpeg" multiple onchange="displaySelectedImages(this)"/>
                                                                  
                                                                    
                                                                 </div>
