--- a/views/home.ejs
+++ b/views/home.ejs
@@ -190,7 +190,7 @@
                                 <figure class="product-media">
                                     
                                     <a href="/view?id=<%= product._id %>">
-                                        <img src="http://localhost:5000/productImages/<%= product.image [0]%>" alt="Product image" class="product-image">
+                                        <img src="/productImages/<%= product.image [0]%>" alt="Product image" class="product-image">
                                     </a>
 
                                     <div class="product-action-vertical">
@@ -273,7 +273,7 @@
                                             <figure class="product-media">
                                                 <span class="product-label label-circle label-top">Top</span>
                                                 <a href="/view?id=<%= product._id %>">
-                                                    <img src="http://localhost:5000/productImages/<%= product.image [0]%>" alt="Product image" class="product-image">
+                                                    <img src="/productImages/<%= product.image [0]%>" alt="Product image" class="product-image">
                                                 </a>
 
                                                 <div class="product-action-vertical">
@@ -340,7 +340,7 @@
                                     <figure class="product-media">
                                     
                                     <a href="/view?id=<%= product._id %>">
-                                        <img src="http://localhost:5000/productImages/<%= product.image[0] %>" alt="Product image" class="product-image">
+                                        <img src="/productImages/<%= product.image[0] %>" alt="Product image" class="product-image">
                                     </a>
 
                                     <div class="product-action-vertical">
