--- a/views/list.ejs
+++ b/views/list.ejs
@@ -87,7 +87,7 @@
 																				<%}%>
 																					<a
 																						href="/view?id=<%= product._id %>">
-																						<img src="http://localhost:5000/productImages/<%= product.image [0]%>"
+																						<img src="/productImages/<%= product.image [0]%>"
 																							alt="Product image"
 																							class="product-image">
 																					</a>
