--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -43,7 +43,7 @@
 									<div class="product">
 										<figure class="product-media">
 											<a href="/view?id=<%= item.product_var_id.product._id%>">
-												<img src="http://localhost:5000/productImages/<%= item.product_var_id.product.image[0]%>" alt="Product image">
+												<img src="/productImages/<%= item.product_var_id.product.image[0]%>" alt="Product image">
 											</a>
 										</figure>
 
