--- a/views/admin/order-edit.ejs
+++ b/views/admin/order-edit.ejs
@@ -237,7 +237,7 @@
                                                                             
                                                                             <div class="col col-3">
                                                                                 <a href="/view?id=<%=item.product_var_id.product._id%>">
-                                                                            <img src="http://localhost:5000/productImages/<%= item.product_var_id.product.image[0] %>" alt="Product image">
+                                                                            <img src="/productImages/<%= item.product_var_id.product.image[0] %>" alt="Product image">
                                                                                 </a>
                                                                             </div>
                                                                             <div class="col-6">
