--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -49,7 +49,7 @@
 												<div class="product">
 													<figure class="product-media">
 														<a href="/view?id=<%= cart[i].product_var_id.product._id %>">
-															<img src="http://localhost:5000/productImages/<%= cart[i].product_var_id.product.image[0] %>" alt="Product image">
+															<img src="/productImages/<%= cart[i].product_var_id.product.image[0] %>" alt="Product image">
 														</a>
 													</figure>
 
