--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -121,7 +121,7 @@
 															<tr>
 																<td class="col-2 pe-3"><a
 																		href="/view?id=<%= item.product_var_id.product._id%>"><img
-																			src="http://localhost:5000/productImages/<%= item.product_var_id.product.image[0]%>"
+																			src="/productImages/<%= item.product_var_id.product.image[0]%>"
 																			alt=""></a></td>
 																<td class="col-8 pe-3"><a
 																		href="/view?id=<%= item.product_var_id.product._id%>">
