--- a/views/product-view.ejs
+++ b/views/product-view.ejs
@@ -23,7 +23,7 @@
                                 <div class="product-gallery product-gallery-vertical">
                                     <div class="row">
                                         <figure class="product-main-image">
-                                            <img id="product-zoom" src="http://localhost:5000/productImages/<%= product.image[0] %>" data-zoom-image="http://localhost:5000/productImages/<%= product.image[0] %>" alt="product image">
+                                            <img id="product-zoom" src="/productImages/<%= product.image[0] %>" data-zoom-image="/productImages/<%= product.image[0] %>" alt="product image">
                                             <!-- <img id="product-zoom" src="assets/images/products/single/1.jpg" data-zoom-image="assets/images/products/single/1-big.jpg" alt="product image"> -->
                                             <a href="#" id="btn-product-gallery" class="btn-product-gallery">
                                                 <i class="icon-arrows"></i>
@@ -33,8 +33,8 @@
                                         <div id="product-zoom-gallery" class="product-image-gallery">
                                             <% for(let i=0;i<product.image.length;i++){ %>
 
-                                                <a class="product-gallery-item active" href="#" data-image="http://localhost:5000/productImages/<%= product.image[i] %>" data-zoom-image="http://localhost:5000/productImages/<%= product.image[i] %>">
-                                                    <img src="http://localhost:5000/productImages/<%= product.image [i] %>" alt="product side">
+                                                <a class="product-gallery-item active" href="#" data-image="/productImages/<%= product.image[i] %>" data-zoom-image="/productImages/<%= product.image[i] %>">
+                                                    <img src="/productImages/<%= product.image [i] %>" alt="product side">
                                                 </a>
                                                 <%  } %>
                                             </div><!-- End .product-image-gallery -->
@@ -295,7 +295,7 @@
                             <figure class="product-media">
                                 
                                 <a href="product.html">
-                                    <img src="http://localhost:5000/productImages/<%= product.image[0] %>" alt="Product image" class="product-image">
+                                    <img src="/productImages/<%= product.image[0] %>" alt="Product image" class="product-image">
                                 </a>
 
                                 <div class="product-action-vertical">
