--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= title %></title>
-    <meta name="keywords" content="HTML5 Template">
-    <meta name="description" content="Molla - Bootstrap eCommerce Template">
+    <meta name="keywords" content="Elektronix">
+    <meta name="description" content="">
     <meta name="author" content="p-themes">
     <!-- Favicon -->
-   
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/icons/favicon32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/icons/favicon16x16.png">
+    <link rel="shortcut icon" href="/assets/images/icons/favicon32x32.png" type="image/x-icon">
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/icons/favicon32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/icons/favicon16x16.png"> -->
 
     <meta name="apple-mobile-web-app-title" content="Molla">
     <meta name="application-name" content="Molla">
