--- a/views/admin/partials/head.ejs
+++ b/views/admin/partials/head.ejs
@@ -13,7 +13,8 @@
     <meta name="description" content="Elektronix">
     <meta name="author" content="p-themes">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/assets/images/icons/favicon32x32.png" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/icons/favicon32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/icons/favicon16x16.png">
     <meta name="apple-mobile-web-app-title" content="Molla">
     <meta name="application-name" content="Molla">
     <meta name="msapplication-TileColor" content="#cc9966">
