--- a/views/admin/partials/head.ejs
+++ b/views/admin/partials/head.ejs
@@ -15,8 +15,8 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/icons/favicon32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/icons/favicon16x16.png">
-    <meta name="apple-mobile-web-app-title" content="Molla">
-    <meta name="application-name" content="Molla">
+    <meta name="apple-mobile-web-app-title" content="Elektronix">
+    <meta name="application-name" content="Elektronix">
     <meta name="msapplication-TileColor" content="#cc9966">
     <meta name="msapplication-config" content="assets/images/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
