wallet adding automatically after creation of account

--- a/views/partials/mobileview.ejs
+++ b/views/partials/mobileview.ejs
@@ -25,31 +25,14 @@
                   <nav class="mobile-nav">
                       <ul class="mobile-menu">
                           <li class="active">
-                              <a href="index.html">Home</a>
+                              <a href="/">Home</a>
                           </li>
                          
                           <li>
-                              <a href="product.html" class="sf-with-ul">Product</a>
-                              <ul>
-                                  <li><a href="product.html">Default</a></li>
-                                  <li><a href="product-centered.html">Centered</a></li>
-                                  <li><a href="product-extended.html"><span>Extended Info<span class="tip tip-new">New</span></span></a></li>
-                                  <li><a href="product-gallery.html">Gallery</a></li>
-                                  <li><a href="product-sticky.html">Sticky Info</a></li>
-                                  <li><a href="product-sidebar.html">Boxed With Sidebar</a></li>
-                                  <li><a href="product-fullwidth.html">Full Width</a></li>
-                                  <li><a href="product-masonry.html">Masonry Sticky Info</a></li>
-                              </ul>
+                              <a href="/list" class="sf-with-ul">Product</a>
                           </li>
                           <li>
                               <a href="#">Pages</a>
-                              <ul>
-                                  <li>
-                                      <a href="about.html">About</a>
-                                  </li>
-                                  <li><a href="contact.html">Contact</a></li>
-                                  <li><a href="faq.html">FAQs</a></li>
-                              </ul>
                           </li>
                          
                       </ul>
