order details product image fix

--- a/views/profile-orderdetails.ejs
+++ b/views/profile-orderdetails.ejs
@@ -76,7 +76,7 @@
 														<div class="row align-items-center">
 															<div class="col col-6">
 																<a href="/view?id=<%=item.product_var_id.product._id%>">
-															<img src="http://localhost:5000/productImages/<%= item.product_var_id.product.image[0] %>" alt="Product image">
+															<img src="https://elektronix.co.in/productImages/<%= item.product_var_id.product.image[0] %>" alt="Product image">
 																</a>
 															</div>
 															<div class="col-6">
