orders page product images fix

--- a/views/profile-orders.ejs
+++ b/views/profile-orders.ejs
@@ -75,7 +75,7 @@
 													<div class="col col-6">
 														<div class="row align-items-center">
 															<div class="col col-3">
-															<img src="http://localhost:5000/productImages/<%= item.product_var_id.product.image[0] %>" alt="Product image">
+															<img src="https://elektronix.co.in/productImages/<%= item.product_var_id.product.image[0] %>" alt="Product image">
 															</div>
 															<div class="col-9">
 															<span><%= item.product_var_id.product.name%></span>
