add offer page active nav item fix

--- a/views/admin/add-offer.ejs
+++ b/views/admin/add-offer.ejs
@@ -48,10 +48,10 @@
 								        <a class="nav-link" id="tab-address-link" href="/admin/users" role="tab" aria-controls="tab-address" aria-selected="false">Users</a>
 								    </li>
                                     <li class="nav-item p-3">
-								        <a class="nav-link active" id="tab-address-link" href="/admin/coupon" role="tab" aria-controls="tab-address" aria-selected="true">Coupons</a>
+								        <a class="nav-link " id="tab-address-link" href="/admin/coupon" role="tab" aria-controls="tab-address" aria-selected="false">Coupons</a>
 								    </li>
 								    <li class="nav-item p-3">
-								        <a class="nav-link " id="tab-address-link" href="/admin/offers" role="tab" aria-controls="tab-address" aria-selected="false">Offers</a>
+								        <a class="nav-link active" id="tab-address-link" href="/admin/offers" role="tab" aria-controls="tab-address" aria-selected="true">Offers</a>
 								    </li>
 								    
 								   
